[gd_scene load_steps=4 format=2]

[ext_resource path="res://telas/assets/marcenaria-de-sucesso.jpg" type="Texture" id=1]
[ext_resource path="res://telas/assets/homi1.png" type="Texture" id=2]
[ext_resource path="res://telas/inicial.gd" type="Script" id=3]

[node name="inicial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = 5.0
margin_right = -4.0
margin_bottom = 5.0
script = ExtResource( 3 )

[node name="fundo" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = -1.0
margin_right = 1026.0
margin_bottom = 599.0
size_flags_horizontal = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="avatar" type="TextureRect" parent="."]
margin_left = 478.0
margin_top = 99.0
margin_right = 978.0
margin_bottom = 599.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 377.0
margin_top = 40.0
margin_right = 677.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.909804, 0.788235, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
text = "Marcenaria da Pesada"
align = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 70.0
margin_top = 288.0
margin_right = 270.0
margin_bottom = 688.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 200.0
margin_bottom = 400.0
grow_horizontal = 2
grow_vertical = 0
rect_pivot_offset = Vector2( -776, 160 )

[node name="iniciar" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 20.0
grow_horizontal = 0
text = "jogar"

[node name="creditos" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 24.0
margin_right = 200.0
margin_bottom = 44.0
text = "creditos"

[node name="configuracoes" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 44.0
text = "configurações"

[node name="sair" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 200.0
margin_bottom = 68.0
text = "sair"

[connection signal="pressed" from="MarginContainer/VBoxContainer/iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/configuracoes" to="." method="_on_configuracoes_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/sair" to="." method="_on_sair_pressed"]
